now fixed on safari

--- a/css/About.css
+++ b/css/About.css
@@ -77,7 +77,7 @@
 	margin-left: -9em;
 	position: absolute;
 	left: 50%;
-	padding: 1em 2em;
+	padding: 0;
 }
 #LandingPage___Desktop>.watchVideoBtn>*{
 	margin: 0 .5em;
